# iLQR_interior-point-method

./: CMakeLists.txt  Readme  output.txt  plot_result.py
compress_road_path_data/: road_path_compress10.csv  road_path_compress11.csv  road_path_compress19.csv  road_path_compress2.csv  road_path_compress24.csv  road_path_compress29.csv  road_path_compress33.csv  road_path_compress34.csv  road_path_compress37.csv  road_path_compress41.csv  road_path_compress45.csv  road_path_compress49.csv  road_path_compress54.csv  road_path_compress57.csv  road_path_compress58.csv  road_path_compress60.csv  road_path_compress66.csv  road_path_compress67.csv  road_path_compress72.csv  road_path_compress74.csv  road_path_compress78.csv  road_path_compress79.csv  road_path_compress8.csv  road_path_compress80.csv  road_path_compress82.csv  road_path_compress87.csv  road_path_compress89.csv  road_path_compress92.csv  road_path_compress94.csv  road_path_compress95.csv  road_path_compress97.csv
include/: common.h  dynamic_car.h  finite_diff.h  ipddp.h  model.h  operator.h  road_data.h
planning_data/: ipddp_result1.csv  ipddp_result100.csv  ipddp_result11.csv  ipddp_result12.csv  ipddp_result14.csv  ipddp_result16.csv  ipddp_result17.csv  ipddp_result18.csv  ipddp_result2.csv  ipddp_result20.csv  ipddp_result28.csv  ipddp_result29.csv  ipddp_result3.csv  ipddp_result31.csv  ipddp_result32.csv  ipddp_result33.csv  ipddp_result34.csv  ipddp_result36.csv  ipddp_result43.csv  ipddp_result44.csv  ipddp_result45.csv  ipddp_result47.csv  ipddp_result5.csv  ipddp_result51.csv  ipddp_result56.csv  ipddp_result58.csv  ipddp_result6.csv  ipddp_result60.csv  ipddp_result61.csv  ipddp_result63.csv  ipddp_result64.csv  ipddp_result65.csv  ipddp_result72.csv  ipddp_result73.csv  ipddp_result74.csv  ipddp_result77.csv  ipddp_result78.csv  ipddp_result80.csv  ipddp_result83.csv  ipddp_result90.csv  (+5 more)
process_road_data/: road_compress12.csv  road_compress13.csv  road_compress16.csv  road_compress21.csv  road_compress22.csv  road_compress23.csv  road_compress27.csv  road_compress28.csv  road_compress3.csv  road_compress30.csv  road_compress31.csv  road_compress35.csv  road_compress36.csv  road_compress39.csv  road_compress42.csv  road_compress44.csv  road_compress46.csv  (+52 more)
(+165 files in other folders)
